added login register page

--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    height: 80px;
+    height: 10vh;
     background-color: midnightblue;
     display: flex;
     justify-content: center;
