--- a/frontend/src/pages/authentication/register.css
+++ b/frontend/src/pages/authentication/register.css
@@ -66,6 +66,14 @@
     font-size: medium;
 }
 
+.success {
+    color: green;
+    margin-top: 10px;
+    text-align: center;
+    font-family: 'Lato';
+    font-size: medium;
+}
+
 .buttonContainer {
     display: flex;
     justify-content: center;
