--- a/frontend/src/pages/authentication/login.css
+++ b/frontend/src/pages/authentication/login.css
@@ -58,6 +58,22 @@
     color: black;
 }
 
+.error {
+    color: red;
+    margin-top: 10px;
+    text-align: center;
+    font-family: 'Lato';
+    font-size: medium;
+}
+
+.success {
+    color: green;
+    margin-top: 10px;
+    text-align: center;
+    font-family: 'Lato';
+    font-size: medium;
+}
+
 .buttonContainer {
     display: flex;
     justify-content: space-between;
