--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -89,11 +89,45 @@
     font-size: large;
 }
 
-.headerSearchInput {
+.headerSearchInput{
     border: none;
     outline: none;
     font-family: 'Lato';
     font-size: large;
+}
+
+.autosuggestSuggestionsContainer {
+    position: absolute;
+    top: 80%;
+    right: 75%;
+    background-color: white;
+    border-radius: 4px;
+    border-color: black;
+    z-index: 2;
+    max-height: 400px; 
+    overflow-y: auto;
+}
+
+.autosuggestSuggestions {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.autosuggestSuggestion {
+    padding: 10px;
+    cursor: pointer;
+    font-family: 'Lato';
+    font-size: large;
+    color: black;
+}
+
+.autosuggestSuggestion:hover {
+    background-color: skyblue;
+}
+
+.autosuggestSuggestion--highlighted {
+    background-color: white;
 }
 
 .headerSearchText {
@@ -104,17 +138,20 @@
 
 .date {
     position: absolute;
-    top: 50px;
+    top: 80%;
+    right: 39%;
     z-index: 2;
+    box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
 }
 
 .options {
     position: absolute;
-    top: 50px;
+    top: 80%;
+    right: 19%;
     background-color: white;
-    color: grey;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+    color: black;
+    border-radius: 7px;
+    box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
     z-index: 2;
 }
 
@@ -123,7 +160,6 @@
     display: flex;
     justify-content: space-between;
     margin: 10px;
-
 }
 
 .optionCounter {
