--- a/frontend/src/pages/list/list.css
+++ b/frontend/src/pages/list/list.css
@@ -59,6 +59,53 @@
     font-size: medium;
 }
 
+.autosuggestContainer {
+    position: relative;
+}
+
+.autosuggestSuggestionsContainer {
+    position: absolute;
+    background-color: white;
+    margin-top: 6px;
+    overflow-y: auto;
+    z-index: 2;
+    max-height: 400px; 
+}
+
+.autosuggestSuggestions {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 180px;
+}
+
+.autosuggestSuggestion {
+    padding: 10px;
+    cursor: pointer;
+    font-family: 'Lato';
+    font-size: medium;
+    color: black;
+}
+
+.autosuggestSuggestion--highlighted {
+    background-color: white;
+}
+
+.autosuggestSuggestion:hover {
+    background-color: skyblue;
+}
+
+.listSearchInput {
+    height: 40px;
+    border: none;
+    padding: 5px;
+    font-weight: 500;
+    font-family: 'Lato';
+    font-size: medium;
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .listItem>span {
     height: 30px;
     padding: 5px;
@@ -103,3 +150,4 @@
 .listResult {
     flex: 3;
 }
+
