--- a/frontend/src/pages/authentication/inputOTP.css
+++ b/frontend/src/pages/authentication/inputOTP.css
@@ -83,3 +83,19 @@
 .verifyButton:hover {
     background-color: #4b4b8c;
 }
+
+.error {
+    color: red;
+    margin-top: 10px;
+    text-align: center;
+    font-family: 'Lato';
+    font-size: medium;
+}
+
+.success {
+    color: green;
+    margin-top: 10px;
+    text-align: center;
+    font-family: 'Lato';
+    font-size: medium;
+}
