updated forgot password func

--- a/frontend/src/pages/authentication/register.css
+++ b/frontend/src/pages/authentication/register.css
@@ -58,7 +58,7 @@
     color: black;
 }
 
-.buttonContainer {
+.registerbuttonContainer {
     display: flex;
     justify-content: center;
     gap: 10px; 
