--- a/frontend/src/pages/authentication/resetPwd.css
+++ b/frontend/src/pages/authentication/resetPwd.css
@@ -1,4 +1,4 @@
-.loginPage {
+.resetPasswordPage {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -9,7 +9,7 @@
     background-position: right center; /* Position on the right center */
 }
 
-.login {
+.resetPassword {
     flex: 1;
     display: flex;
     align-items: center;
@@ -18,7 +18,13 @@
     padding-left: 22%; 
 }
 
-.loginContainer {
+.resetPasswordTitle {
+    color: midnightblue;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.newPasswordContainer {
     width: 30%; 
     background-color: #ffffff; 
     padding: 20px; 
@@ -29,21 +35,7 @@
     gap: 10px; /* Gap between elements */
 }
 
-.loginTitle {
-    color: midnightblue;
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.loginInput{
-    height: 30px;
-    padding: 10px;
-    font-family: 'Lato';
-    font-size: medium;
-    width: 95%;
-}
-
-.passwordInputContainer {
+.comfirmPasswordContainer {
     position: relative;
     width: 100%;
 }
@@ -58,14 +50,22 @@
     color: black;
 }
 
-.loginbuttonContainer {
+.resetPasswordInput {
+    height: 30px;
+    padding: 10px;
+    font-family: 'Lato';
+    font-size: medium;
+    width: 95%;
+}
+
+.buttonContainer {
     display: flex;
     justify-content: space-between;
     gap: 10px; 
     margin-top: 10px;
 }
 
-.loginButton, .forgotPassword {
+.resetPasswordButton {
     width: 48%; /* Make buttons take up equal width */
     border: none;
     padding: 10px 20px;
@@ -77,9 +77,10 @@
     cursor: pointer;
     border-radius: 10px;
     text-align: center;
+    align-self: center;
 }
 
-.loginButton:hover, .forgotPassword:hover {
+.resetPasswordButton:hover {
     background-color: #4b4b8c; /* Slightly different color on hover */
 }
 
