--- a/frontend/src/pages/authentication/resetPwd.css
+++ b/frontend/src/pages/authentication/resetPwd.css
@@ -18,13 +18,7 @@
     padding-left: 22%; 
 }
 
-.resetPasswordTitle {
-    color: midnightblue;
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.newPasswordContainer {
+.resetPasswordContainer {
     width: 30%; 
     background-color: #ffffff; 
     padding: 20px; 
@@ -35,9 +29,36 @@
     gap: 10px; /* Gap between elements */
 }
 
-.comfirmPasswordContainer {
+.resetPasswordTitle {
+    color: midnightblue;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.resetPasswordInputContainer {
     position: relative;
     width: 100%;
+}
+
+.resetPasswordInput{
+    height: 30px;
+    padding: 10px;
+    font-family: 'Lato';
+    font-size: medium;
+    width: 95%;
+}
+
+.confirmPasswordInputContainer {
+    position: relative;
+    width: 100%;
+}
+
+.confirmPasswordInput{
+    height: 30px;
+    padding: 10px;
+    font-family: 'Lato';
+    font-size: medium;
+    width: 95%;
 }
 
 .passwordToggleIcon {
@@ -50,17 +71,9 @@
     color: black;
 }
 
-.resetPasswordInput {
-    height: 30px;
-    padding: 10px;
-    font-family: 'Lato';
-    font-size: medium;
-    width: 95%;
-}
-
-.buttonContainer {
+.resetPasswordButtonContainer {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     gap: 10px; 
     margin-top: 10px;
 }
@@ -77,7 +90,6 @@
     cursor: pointer;
     border-radius: 10px;
     text-align: center;
-    align-self: center;
 }
 
 .resetPasswordButton:hover {
