--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -34,3 +34,79 @@
 .navButton:hover {
     background-color: lightgrey;
 }
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdownButton {
+    width: 220px;
+    margin-left: 20px;
+    border: none;
+    border-radius: 20px;
+    padding: 5px 15px;
+    cursor: pointer;
+    color: black;
+    font-family: 'Lato';
+    font-size: large;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.dropdownButton:hover {
+    background-color: lightgrey;
+}
+
+.dropdownContent {
+    display: none;
+    position: absolute;
+    background-color: white;
+    width: 70%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 5px;
+    margin-top: 1%;
+    left: 25%;
+    animation: dropdownAnimation 0.5s forwards;
+}
+
+.dropdownContent.show {
+    display: block;
+    animation: dropdownShow 0.5s forwards;
+}
+
+.dropdownContent.hide {
+    display: block;
+    animation: dropdownHide 0.5s forwards;
+}
+
+.dropdownItem {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-family: 'Lato';
+    font-size: large;
+    cursor: pointer;
+}
+
+.dropdownItem:hover {
+    background-color: lightgrey;
+}
+
+.menuIcon {
+    margin-left: 5px;
+}
+
+@keyframes dropdownShow {
+    0% { opacity: 0; transform: translateY(-10px); }
+    100% { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes dropdownHide {
+    0% { opacity: 1; transform: translateY(0); }
+    100% { opacity: 0; transform: translateY(-10px); }
+}
