--- a/frontend/src/pages/list/list.css
+++ b/frontend/src/pages/list/list.css
@@ -6,7 +6,7 @@
 
 .listWrapper {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1300px;
     display: flex;
     gap: 20px;
 }
@@ -16,6 +16,7 @@
     flex: 1;
 }
 
+/* Map */
 .mapContainer {
     width: 100%;
     margin-bottom: 20px;
@@ -24,19 +25,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-.resultContainer {
-    position: right;
-    flex: 1;
-}
-
-.sortContainer {
-    padding-bottom: 20px
-}
-
-.sortButton {
-    width: 30%;
-}
-
+/* Search */
 .listSearch {
     flex: 1;
     background-color: whitesmoke;
@@ -76,6 +65,7 @@
     font-size: medium;
 }
 
+/* Autosuggest */
 .autosuggestContainer {
     position: relative;
 }
@@ -124,6 +114,7 @@
     box-sizing: border-box;
 }
 
+/* Date Picker */
 .listItem>span {
     height: 30px;
     padding: 5px;
@@ -145,8 +136,9 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+/* Options */
 .listOptions {
-    padding: 15px;
+    padding: 5px;
 }
 
 .listOptionItem {
@@ -157,10 +149,10 @@
     font-size: 16px;
 }
 
-.listOptionInput {
-    width: 50px;
-    font-size: medium;
-    text-align: center;
+.listOptionText {
+    font-size: 16px;
+    padding: 10px 0px;
+    font-weight: bold;
 }
 
 .listSearch>button {
@@ -176,10 +168,35 @@
     cursor: pointer;
 }
 
-.listResult {
-    flex: 3;
+.optionCounter {
+    display: flex;
+    align-items: center;
 }
 
+.optionCounterButton {
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: midnightblue;
+    color: white;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.optionCounterNumber {
+    padding: 0 10px;
+    font-size: 18px;
+    width: 20px;
+    color: black;
+    font-family: 'Lato';
+    text-align: center;
+}
+
+/* Price Range */
 .rangeSlider {
     margin-top: 15px;
 }
@@ -217,32 +234,7 @@
     font-family: 'Lato';
 }
 
-.optionCounter {
-    display: flex;
-    align-items: center;
-}
-
-.optionCounterButton {
-    width: 30px;
-    height: 30px;
-    border: none;
-    background-color: midnightblue;
-    color: white;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.optionCounterNumber {
-    margin: 0 10px;
-    font-size: 18px;
-    color: black;
-    font-family: 'Lato';
-}
-
+/* Rating */
 .listStarRatingItem {
     padding: 5px;
 }
@@ -257,6 +249,31 @@
     padding: 1%;
 }
 
+/* Sorting */
+.resultContainer {
+    position: right;
+    flex: 1;
+}
+
+.resultContainer>span {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.sortContainer {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+.sortButton {
+    width: 30%;
+}
+
+.listResult {
+    flex: 3;
+}
+
+/* Pagination */
 .paginationBar {
     display: flex;
     justify-content: center;
