updated register page

--- a/frontend/src/pages/authentication/register.css
+++ b/frontend/src/pages/authentication/register.css
@@ -35,12 +35,35 @@
     font-weight: bold;
 }
 
-.registerInput{
+.registerInput {
     height: 30px;
     padding: 10px;
     font-family: 'Lato';
     font-size: medium;
-    width: 95%;
+    width: 95%; /* Adjusted width for input fields */
+}
+
+.registerInputFirstName {
+    height: 30px;
+    padding: 10px;
+    font-family: 'Lato';
+    font-size: medium;
+    width: 100%; /* Adjusted width for input fields */
+}
+
+.registerRow {
+    display: flex;
+    gap: 10px;
+}
+
+.salutationInputContainer {
+    flex: 1; /* Take up remaining space */
+}
+
+.registerInputSalutation {
+    height: 100%;
+    font-family: 'Lato';
+    font-size: medium;
 }
 
 .passwordInputContainer {
@@ -99,3 +122,6 @@
     font-family: 'Lato';
     font-size: medium;
 }
+
+
+
