--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -185,3 +185,12 @@
 .optionCounterButton:disabled {
     cursor: not-allowed;
 }
+
+.headerSearch img{
+    max-width: 100%;
+    max-height: 100%;
+    overflow:hidden;
+
+
+
+}
