--- a/frontend/src/pages/hotel/hotel.css
+++ b/frontend/src/pages/hotel/hotel.css
@@ -166,23 +166,30 @@
 .centeredContainer {
     display: flex;
     justify-content: center;
-    margin-top: 20px; /* Adjust margin as needed */
     flex-direction: column;
+    margin-top: 20px; /* Adjust margin as needed */
+    
   }
   
   .centeredContent {
     width: 100%; /* Ensure content takes full width */
     max-width: 1050px; /* Adjust max-width as per design */
+    
   }
 
   .amenitiesContainer {
     display: flex;
     justify-content: center; /* Center content horizontally */
+    width: 100%; /* Ensure content takes full width */
+    max-width: 1050px; /* Adjust max-width as per design */
+    
   }
   
   .amenitiesContainer .centeredContent {
     max-width: 79%; /* Adjust max-width as needed */
     margin-left: auto; /* Push content to the right */
+    width: 100%; /* Ensure content takes full width */
+    max-width: 1050px; /* Adjust max-width as per design */
   }
 
   .roomListContainer {
@@ -190,6 +197,8 @@
     width: 65%; /* Ensure it takes full width */
     display: flex;
     justify-content: center; /* Center the RoomList horizontally */
+    width: 100%; /* Ensure content takes full width */
+    max-width: 1050px; /* Adjust max-width as per design */
 }
 
 .mapContainer {
