--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -191,6 +191,36 @@
     max-height: 100%;
     overflow:hidden;
 
+}
 
+
+.alert {
+    color: white;
+    padding: 12px 16px;
+    border: #79282c 2px solid;
+    text-decoration: none;
+    display: block;
+    font-family: 'Lato';
+    font-size: large;
+    cursor: pointer;
+    background-color:#280d0f;
+    border-radius: 10px;
+    margin-top:20px;
+}
+
+.alert button{
+    width: 120px;
+    border: none;
+    border-radius: 20px;
+    padding: 5px 10px;
+    cursor: pointer;
+    color: black;
+    font-family: 'Lato';
+    font-size: large;
+}
+
+.alert-primary {
+    background-color:#280d0f;
+    border: none;
 
 }
