--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -91,24 +91,20 @@
     margin-left: 5px;
 }
 
-.alert {
+.alert-container {
     color: white;
     padding: 12px 16px;
+    border: #79282c 2px solid;
     text-decoration: none;
     display: block;
     font-family: 'Lato';
     font-size: large;
     cursor: pointer;
-    background-color:tomato;
+    background-color:#280d0f;
     border-radius: 10px;
     margin-top:20px;
 }
 
-.alert Heading{
-    color: white;
-    font-family: 'Lato';
-    font-size: x-large;
-}
 .alert button{
     width: 120px;
     border: none;
