--- a/frontend/src/pages/list/list.css
+++ b/frontend/src/pages/list/list.css
@@ -1,3 +1,12 @@
+.mainContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    font-family: 'Lato';
+    justify-content: center;
+}
+
 .listContainer {
     display: flex;
     justify-content: center;
