--- a/frontend/src/components/modal/modal.css
+++ b/frontend/src/components/modal/modal.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.6);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,22 +15,49 @@
     padding: 20px;
     border-radius: 5px;
     text-align: center;
+    font-family: 'Lato';
+    border-radius: 15px;
+    font-size: large;
+    font-weight: bold;
 }
 
 .modalContent button {
     margin: 10px;
-    padding: 10px 20px;
+}
+
+.deleteBtn {
+    background-color: #e74c3c; /* Red color */
+    color: white;
+    width: 20%;
     border: none;
-    border-radius: 5px;
+    padding: 10px 20px;
+    color: white;
+    font-weight: bold;
+    font-size: medium;
+    font-family: 'Lato';
     cursor: pointer;
+    border-radius: 10px;
+    text-align: center;
 }
 
-.modalContent button:first-child {
-    background: #e74c3c; /* Red color */
-    color: white;
+.deleteBtn:hover {
+    background-color: darkred;
 }
 
-.modalContent button:last-child {
-    background: #95a5a6; /* Grey color */
+.cancelBtn {
+    background-color: #95a5a6; /* Grey color */
     color: white;
+    width: 20%;
+    border: none;
+    padding: 10px 20px;
+    font-weight: bold;
+    font-size: medium;
+    font-family: 'Lato';
+    cursor: pointer;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.cancelBtn:hover {
+    background-color: gray;
 }
