--- a/frontend/src/components/room/room.css
+++ b/frontend/src/components/room/room.css
@@ -13,7 +13,7 @@
 
 .room {
     display: flex;
-    align-items:center;
+    /* align-items:center; */
     justify-content: space-between;
     border: 1px solid #ccc;
     border-radius: 10px;
