--- a/frontend/src/pages/list/list.css
+++ b/frontend/src/pages/list/list.css
@@ -1,5 +1,5 @@
 .mainContainer {
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
