--- a/frontend/src/pages/authentication/account.css
+++ b/frontend/src/pages/authentication/account.css
@@ -64,3 +64,29 @@
 .deleteAccountButton:hover {
     background-color: darkred; /* Darker red */
 }
+
+.navButtonAccToHome {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-family: 'Lato';
+    font-size: large;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: gray;
+    position: absolute;
+    top: 15%;
+    transform: translateY(-50%);
+    padding-left: 2%;
+    padding-top: 2%;
+}
+  
+.navButtonAccToHome .navIcon {
+    font-size: 40px;
+    transition: color 0.3s;
+}
+  
+.navButtonAccToHome:hover .navIcon {
+    color: black;
+}
