--- a/frontend/src/pages/authentication/bookings.css
+++ b/frontend/src/pages/authentication/bookings.css
@@ -71,6 +71,35 @@
     font-size: 18px;
     color: #666;
 }
+
+.navButtonBookToHome {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-family: 'Lato';
+    font-size: large;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: gray;
+    position: absolute;
+    top: 7%;
+    right: 93%;
+    transform: translateY(-50%);
+    padding-left: 2%;
+    padding-top: 2%;
+    text-align: center;
+}
+  
+.navButtonBookToHome .navIcon1 {
+    font-size: 40px;
+    transition: color 0.3s;
+}
+  
+.navButtonBookToHome:hover{
+    color: black;
+    
+}
   
 .navButtonToggle {
     background: none;
@@ -102,10 +131,9 @@
 }
   
 .leftNavButton {
-    left: 14%; /* Adjust as needed */
+    left: 15%; /* Adjust as needed */
 }
   
 .rightNavButton {
     right: 45.5%; /* Adjust as needed */
 }
-  
