--- a/frontend/src/pages/authentication/register.css
+++ b/frontend/src/pages/authentication/register.css
@@ -27,6 +27,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px; /* Gap between elements */
+    height: 60vh;
 }
 
 .registerTitle {
@@ -68,14 +69,14 @@
 }
 
 .countryCodeInputContainer {
-    flex: 1; /* Take up remaining space */
+    flex: 1; 
 }
 
 .registerInputCountryCode {
     height: 100%;
     font-family: 'Lato';
     font-size: medium;
-    width: 100%; /* Adjusted width for input fields */
+    width: 100%;
 }
 
 .registerInputPhoneNumber {
